[package]
name = "test-route"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
headless_chrome = "1.0.5"
pdfium-render = "0.8.5"
serde = {version = "1.0.163", features = ["derive"]}
tokio = {version = "1.28.2", features = ["full"]}
