[package]
name = "scrape-web-by-virtual-printing"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
headless_chrome = "1.0.5"
pdfium-render = "0.8.4"
serde = {version = "1.0.163", features = ["derive"]}
tokio = {version = "1.28.2", features = ["full"]}
url = "2.4.0"
