[package]
name = "scrape-web-by-virtual-printing"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome.git" }
html2text = "0.6.0"
http_req = "0.9.1"

# headless_chrome = "1.0.5"
pdfium-render = "0.8.4"
readah = "0.1.3"
serde = {version = "1.0.163", features = ["derive"]}
tokio = {version = "1.28.2", features = ["full"]}
url = "2.4.0"
